--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,21 +5,15 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
-    "click>=8.3.0",
+    "aiokafka>=0.12.0",
+    "alembic>=1.14.0",
+    "asyncpg>=0.30.0",
+    "fastapi[standard]>=0.121.1",
+    "langchain>=1.0.5",
+    "langchain-google-genai>=3.0.1",
     "pandas>=2.3.3",
-    "pydantic>=2.12.4",
     "pydantic-settings>=2.11.0",
-    "rich>=14.2.0",
+    "pypdf>=5.1.0",
+    "sqlalchemy[asyncio]>=2.0.36",
+    "uvicorn>=0.38.0",
 ]
-
-[build-system]
-requires = ["uv_build>=0.9.8,<0.10.0"]
-build-backend = "uv_build"
-
-[dependency-groups]
-dev = [
-    "ruff>=0.14.4",
-]
-
-[project.scripts]
-parivyaya = "parivyaya.cli:cli"
