--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,6 +69,20 @@ services:
         networks:
             - parivyaya-network
 
+    ui:
+        build:
+            context: .
+            dockerfile: Dockerfile.ui
+        container_name: ui
+        ports:
+            - "3000:3000"
+        environment:
+            NEXT_PUBLIC_API_URL: http://worker:80
+        depends_on:
+            - worker
+        networks:
+            - parivyaya-network
+
 networks:
     parivyaya-network:
         driver: bridge
