deploy static demo

--- a/ui/.env.local.example
+++ b/ui/.env.local.example
@@ -1,2 +1,5 @@
 # API Configuration
 NEXT_PUBLIC_API_URL=http://localhost:8000
+
+# Demo Mode (set to true for static site generation with dummy data)
+NEXT_PUBLIC_DEMO_MODE=false
